# unimeet

./: .gitignore  manage.py  pyproject.toml
unimeet/: asgi.py  settings.py  urls.py  wsgi.py
user/: models.py  serializer.py  signals.py  urls.py  views.py
user/migrations/: 0001_initial.py
