[tool.poetry]
name = "unimeet"
version = "0.1.0"
description = ""
authors = ["Arybzhan, Aizada"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^6.0"
djangorestframework = "^3.16.1"
psycopg2-binary = "^2.9.11"
django-environ = "^0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
